2006-01-10  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme): Declare resource-uri.

	* kawa/repl.java (processArgs): The debugPrintExpr flag was moved from
	ModuleExp to Compilation.

	* kawa/standard/require.scm (featureMap): HTTP was moved.
	* Makefile.am (SUBDIRS): No longer conditionalize on ENABLE_SERVLET.
	Instead, always do gnu/kawa/servlet.  However, rearrange so it done
	later, since it now includes HTTP.scm.

2006-01-07  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java (consX$V): New static helper method.
	(expand_pair): Use new consX$V method rather than compiled
	method in gnu.kawa.slib.srfi1.  The latter caused an awkward
	dependency which broke quasi-quotation under Common Lisp.
	(consXType): Remove no-longer-needed field.

	* kawa/standard/Scheme.java (getNamedType): Declare <URI> type.
	(initScheme): Declare resolve-uri function, and module-uri syntax,

2006-01-04  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (apply): Use new URI_utils methods.

2005-12-31  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme): Declare URI function.
	(createReadTable): Declare URI as a reader constructor.

	* kawa/lang/Quote.java: Un-tab-ify conditional code.
	* kawa/lang/SyntaxTemplate.java: Likewise.

2005-12-30  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run): Fix bug which prevented getOutputConsumer
	from being run for a repl, thus giving incorrect output.

	* kawa/standard/require.java (featureMap): Add "srfi-10" as an alias.
	* kawa/standard/Scheme.java (createReadTable): Handle "#," syntax.

2005-12-22  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (translate): Set source position
	on pattern Declarations.

2005-12-11  Per Bothner  <per@bothner.com>

	Remember URL of loaded file, so it can be passed to ArrayClassLoader.
	* kawa/Shell.java (run): Take extra URL argument.
	(runFile): Handle skipLines even if read from stdin.